fix scrollbar

--- a/src/tea/editor/css/editor.scss
+++ b/src/tea/editor/css/editor.scss
@@ -26,18 +26,26 @@ $parent: "#editor";
 		height: 100%;
 		overflow: hidden;
 		flex: 1;
+
+		div.Toolbar {
+			overflow: hidden;
+		}
 	}
 	div.CanvasPanel {
 		display: flex;
 		height: 100%;
 		justify-content: center;
 		align-items: flex-start;
+		overflow: scroll;
 
 		canvas {
 			max-width: 100%;
 			max-height: 100%;
 			object-fit: contain;
 		}
+	}
+	div.CanvasPanel::-webkit-scrollbar {
+		display: none;
 	}
 	div.RightPanel {
 		width: 200px;
